<resources>
    <string name="app_name">User Application</string>

    <string name="fixed_tariff">fixed tariff</string>
    <string name="_4_place">4 place</string>
    <string name="_7_place">7 place</string>
    <string name="min_tariff_200">min tariff 200</string>
    <string name="min_tariff_300">min tariff 300</string>
    <string name="taxi">Taxi</string>
    <string name="shipping">Shipping</string>
    <string name="evacuator">evacuator</string>
    <string name="order_by_phone_call">order by phone call free</string>
    <string name="go">go</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="address">address</string>
    <string name="ok">ok</string>
    <string name="passenger">Passenger</string>
    <string name="trucks">Trucks</string>
    <string name="title_activity_maps">Map</string>
    <string name="search">search</string>
    <string name="search_location">search location</string>
</resources>
