<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.userapplication.Fragments.TaxiAmragrumFragment">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/place4_amragrel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_place" />

        <TextView
            android:id="@+id/minimal_sakagin_200_amragrel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_tariff_200" />

        <RadioButton
            android:id="@+id/place7_amragrel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7_place" />

        <TextView
            android:id="@+id/minimal_sakagin_300_amragrel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_tariff_300" />

    </RadioGroup>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/taxi_today_amragrel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today" />

        <RadioButton
            android:id="@+id/taxi_tomorrow_amragrel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tomorrow" />
    </RadioGroup>

    <DigitalClock
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/taxi_location_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_location_black_24dp" />

        <EditText
            android:id="@+id/taxi_address_amragrel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/address" />
    </LinearLayout>


    <Button
        android:id="@+id/taxi_amragrel_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok" />

</LinearLayout>
